-
Bug
-
Resolution: Done
-
P2: Important
-
6.4.1
-
-
deda185ba9 (qt/qtdeclarative/dev) deda185ba9 (qt/tqtc-qtdeclarative/dev) f284ba2917 (qt/qtdeclarative/6.4) f284ba2917 (qt/tqtc-qtdeclarative/6.4)
See attached recording, when trying to inspect the displayed variables, the app crashes. Does not crash in 6.2.6
- relates to
-
QTBUG-111019 "Debug Error!" on lowenergyscanner example
-
- Closed
-
-
QTBUG-111136 Trying to debug samegame demos crashes it
-
- Closed
-
- resulted in
-
QTBUG-108704 QQmlGadgetPtrWrapper is dangerous
-
- Closed
-
| For Gerrit Dashboard: QTBUG-108646 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 444225,5 | Don't crash on QQmlGadgetPtrWrapper instances in debug service | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 444714,2 | Don't crash on QQmlGadgetPtrWrapper instances in debug service | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |