Don't crash on QQmlGadgetPtrWrapper instances in debug service

They have the confusing property of being a QObject but having a
QMetaObject that says it's a Q_GADGET.

Fixes: QTBUG-108646
Change-Id: I6df34c2004918cd89691f4b5eb4b6267dabcd7ff
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit deda185ba95ffb99b1500364e2eba774e9dbc1e6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>